# webshop

./: .clever.json  .env  .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20210301133224_create_subscriptions_table.sql  20210301133224_create_tables.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: cart.rs  mod.rs  ping.rs  products.rs  serializers.rs  subscriptions.rs  users.rs
tests/: ping.rs
tests/api/: cart.rs  helpers.rs  main.rs  ping.rs  products.rs  subscriptions.rs  users.rs
