[package]
name = "projetoweb2"
version = "0.1.0"
authors = ["Fernando Filho <fernando@dimap.ufrn.br>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "projetoweb2"

[dependencies]
actix-web = "4.0.0-beta.3"
serde = "1.0.115"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

#[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["macros"] }
