[package]
name = "webshop"
version = "0.1.0"
authors = ["Fernando Filho <fernando@dimap.ufrn.br>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "webshop"

[dependencies]
actix = "0.11.0-beta.2"
actix-web = "4.0.0-beta.3"
actix-rt = "2.0.2"
serde = "1.0.124"
serde-aux = "1.0.1"
serde_json = "1"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
sqlx = { version = "0.4.1", default-features = false, features = [ "runtime-async-std-native-tls", "macros", "postgres", "uuid", "migrate", "json"]  }
async-std = { version = "1.6", features = [ "attributes" ] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
